--- a/projectsc.css
+++ b/projectsc.css
@@ -13,6 +13,11 @@
     padding-top:35px 35px;
     background: transparent;
 }
+.parallaxfoot{
+	height:100px;
+    padding-top:35px 35px;
+    background: transparent;
+}
 .navhead{
 	margin-top: 0;
 	float: top;
@@ -49,7 +54,7 @@ li>a{
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .navbar{
-	width: 625px;
+	width: auto;
 	height: 80px;
 	float:right;
 }
@@ -67,15 +72,18 @@ li>a{
 .container{
 	max-width:965px;
 	margin:0 auto;
-	background:#f9f9f9;
+	background:#afafaf;
 	font-size:24px;
 	padding:0px;
 }
+body{
+	background:#afafaf;
+}
 .introh{
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size:100px;
+	font-size:6vw;
 	color:white;
-	padding-top: 200px;
+	padding-top: 150px;
 	z-index:2;
 	text-align:center;
 	position: relative;
