--- a/stylepara.css
+++ b/stylepara.css
@@ -133,7 +133,7 @@ body{
 
 /*footer*/
 .footer-distributed{
-	background-color: #292c2f;
+	background-color: black;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -281,6 +281,55 @@ body{
 /* If you don't want the footer to be responsive, remove these media queries */
 
 @media (max-width: 880px) {
+	.navhead{
+		margin-top: 0;
+		float: top;
+		width: 100%;
+		height: 200px;
+		transition: background-color 1s ease 0s;
+		background: transparent;
+	    z-index:3;
+	   	position:fixed;
+	}
+	.navhead.opaque{
+		background-color:black;
+		transition: background-color 1s ease 0s;
+		position: fixed;
+		color:white;
+	}
+	.navhead a.opaque{
+		color:white;
+		list-style: none;
+		text-decoration: none;
+	}
+	.navbar>li{
+		list-style: none;
+		float: left;
+	}
+	li>a{
+		display: block;
+		color:black;
+		text-decoration: none;
+		line-height: 50px;
+		text-align: center;
+		font-size: 20px;
+		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	}
+	.navbar{
+		width: auto;
+		height: 80px;
+		float:right;
+	}
+	#logo{
+		z-index: 2;
+		height: 70px;
+		float:left;
+	}
+	*{
+		margin: 0;
+		padding:0;
+
+	}
 
 	.footer-distributed{
 		font: bold 14px sans-serif;
